tests/neg/i11118.scala
class Foo {
  val (a,b) = (1,2,3) // error
}
